@@ -691,7 +691,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Enter New Input"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    PUSHBUTTON      "Cancel",BTN_CANCEL,40,45,50,14
+    PUSHBUTTON      "Cancel",BTN_CANCELED,40,45,50,14
     CTEXT           "Press a key",LBL_KEY_COMBO,47,14,90,12
     PUSHBUTTON      "Clear",BTN_CLEAR,95,45,50,14
 END
