@@ -403,6 +403,7 @@
 #define IDC_MOVIE_SUBTITLESINAVI        1197
 #define IDC_MOVIE_AUTOBACKUP            1198
 #define IDC_SOUNDS_RESTOREDEFAULTS      1199
+#define BTN_CANCELED                    1200
 #define MENU_NETWORK                    40040
 #define MENU_PALETTE                    40041
 #define MENU_SOUND                      40042
@@ -686,7 +687,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        125
 #define _APS_NEXT_COMMAND_VALUE         40353
-#define _APS_NEXT_CONTROL_VALUE         1200
+#define _APS_NEXT_CONTROL_VALUE         1201
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
 #endif
